--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 		<script type="text/javascript" src="cordova-2.2.0.js"></script>
+		<script type="text/javascript" src="db.js" ></script>
 	</head>
     
 	<body>
@@ -18,13 +19,12 @@
 			</div>
 			
             <div data-role="content"> 
-            <form method="POST" action="cadastro.php">
-            <label>Nome:</label><input type="text" name="nome" id="nome" size="50"><br>
-            <label>Email:</label><input type="text" name="email" id="email" size="50"><br>
-            <label>Senha:</label><input type="password" name="senha" id="senha" size="15"><br>
-            <input type="submit" data-icon="check" value="Cadastrar" id="cadastrar" name="cadastrar" >
-            </form>
-            <a href="index.html" data-role="button" data-icon="delete">Voltar</a>
+			<form name="itemForm">    	
+	           	<label for="nome">Usuário:</label><input type="text" name="nome" id="nome" size="50"/>
+	            <label for="senha">Senha:</label><input type="password" name="senha" id="senha" size="15"/>
+	            <input type="button" name="create" data-icon="check" value="Entrar" onclick="populateDB()" />
+	 			<a href="index.html" data-role="button" data-icon="delete">Voltar</a>
+			</form>
             </div>
 
 		</div>
