--- a/login.html
+++ b/login.html
@@ -19,14 +19,25 @@
 			</div>
 			
             <div data-role="content"> 
-			<form name="itemForm">    	
-	           	<label for="nome">Usuário:</label><input type="text" name="nome" id="nome" size="50"/>
-	            <label for="senha">Senha:</label><input type="password" name="senha" id="senha" size="15"/>
-	            <input type="button" name="create" data-icon="check" value="Entrar" onclick="populateDB()" />
-	 			<a href="index.html" data-role="button" data-icon="delete">Voltar</a>
-			</form>
+			<form method="POST" action="login.php">
+            <label>Usuário:</label><input type="text" name="nome" id="nome" size="50"><br>
+            <label>Senha:</label><input type="password" name="senha" id="senha" size="15"><br>
+            <input type="submit" data-icon="check" value="Entrar" id="entrar" name="entrar" >
+            </form>
+	 		<a href="index.html" data-role="button" data-icon="delete">Voltar</a>
+			
             </div>
 
 		</div>
 	</body>
 </html>
+
+<form method="post" action="valida.php">
+<label>Usuário</label>
+<input type="text" name="usuario" maxlength="50" />
+
+<label>Senha</label>
+<input type="password" name="senha" maxlength="50" />
+
+<input type="submit" value="Entrar" />
+</form>
